# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-22 22:23:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-149

    Summary:
      FTP downloading works
    Revision:
      missingh--head--0.7--patch-149


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-22 22:17:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-148

    Summary:
      Got RETR written!
    Revision:
      missingh--head--0.7--patch-148


    modified files:
     ChangeLog TODO libsrc/MissingH/IO.hs
     libsrc/MissingH/IO/HVIO.hs
     libsrc/MissingH/Network/FTP/Server.hs


2004-12-22 19:49:29 GMT	John Goerzen <jgoerzen@complete.org>	patch-147

    Summary:
      Checkpointing port support
    Revision:
      missingh--head--0.7--patch-147


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-22 19:36:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-146

    Summary:
      Fixed passive mode basics
    Revision:
      missingh--head--0.7--patch-146


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/ParserClient.hs


2004-12-22 19:30:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-145

    Summary:
      Checkpointing passive support
    Revision:
      missingh--head--0.7--patch-145


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs
     libsrc/MissingH/Network/SocketServer.hs


2004-12-22 17:01:31 GMT	John Goerzen <jgoerzen@complete.org>	patch-144

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-144


    modified files:
     ChangeLog ftptest.hs libsrc/MissingH/Network/SocketServer.hs


2004-12-22 16:55:59 GMT	John Goerzen <jgoerzen@complete.org>	patch-143

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-143


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs

